--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 </head>
 
 <body>
-    <main role=main>
+    <main role="main">
         <div class="start-display" id="start-page">
-            <header class="row">
+            <header role="banner" class="row">
                 <h1 class="logo">Weather or Not</h1>
                 <p class="api-info">(Powered by OpenWeatherMap and Foursquare API)</p>
                 <p>If you would like to plan a day that involves Pi&#xF1;a Coladas and staying OUT of the rain, look no further! You've come to the right place!</p>
             </header>
 
-            <form action="#" class="search-form row" id="search-query-form">
+            <form role="search" action="#" class="search-form row" id="search-query-form">
                 <label for="search-term">City</label>
                 <input type="text" placeholder="Enter a city" class="js-query" id="search-term" required>
                 <button type="submit" class="submit-button">Search</button>
             </form>
         </div>
 
-        <section class="weather row" id="weather-display">
+        <section class="weather row" id="weather-display" aria-live="polite">
 
         </section>
         <nav role="navigation" class="navigation hide" id="results-navigation">
@@ -41,7 +41,7 @@
             </div>
         </nav>
 
-        <section id="foursquare-results" class="row">
+        <section aria-live="polite" id="foursquare-results" class="row">
 
         </section>
     </main>
