--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <label for="search-term">City</label>
                 <input type="text" placeholder="Enter a city" class="js-query" id="search-term" onkeyup="lettersOnly(this)" required>
                 <button type="submit" class="submit-button">Search</button>
+                 <p role="alert" class="hidden" id="errMsg">Please enter a valid location</p>
             </form>
         </div>
 
